# email-thing

./: Cargo.toml
src/: cli.rs  config.rs  main.rs
