[package]
name = "email-thingie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
imap = { version = "2.4.1", features = ["native-tls"]}
keyring = "1.2.1"
native-tls = "0.2.11"
rpassword = "7.2.0"
whoami = "1.3.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_yaml = "0.9.17"
text_io = "0.1.12"

[dependencies.confy]
features = ["yaml_conf"]
default-features = false
